<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="ExtraTranslation">
    <string name="app_name">Conecta4</string>
    <string name="new_game">New Game</string>
    <string name="load_game">Load Game</string>
    <string name="about">About</string>
    <string name="rows">Rows</string>
    <string name="columns">Columns</string>
    <string name="game_parameters">Game Parameters</string>
    <string name="player">Player</string>
    <string name="insert_player_hint">Insert your name</string>
    <string name="start">Start</string>
    <string name="delete">Delete</string>
    <string name="player1">Player 1</string>
    <string name="invalid_movement">Invalid Movement</string>
    <string name="round_already_finished">Round Already Finished</string>
    <string name="game_exception">Game Exception</string>
    <string name="new_round">New Round</string>
    <string name="game_over">Game Over</string>
    <string name="game_over_message">The match ended. Would you like to start a new one?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="round_restarted">Round Restarted</string>
    <string name="about_text">Third Assignment of the Conecta4 project of DADM.\n\nMade by: Sergio Teso Lorenzo
    </string>
    <string name="preferences">Preferences</string>
    <string name="general_settings">General Settings</string>
    <string name="player_name">Player Name</string>
    <string name="game_settings">Game Settings</string>
    <string name="sound">Sound</string>
    <string name="sound_summary">Play beautiful sounds in the game</string>
    <string name="n_rows">Number of Rows</string>
    <string name="n_columns">Number of Columns</string>
    <string name="title_activity_settings_c4">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>
    <string name="pref_default_display_name">Segismundo De las Berzas</string>

    <!-- Database Strings -->
    <string name="db_login_error">Username or password incorrect.</string>
    <string name="prompt_email">Insert your email</string>
    <string name="prompt_password">Insert your password</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>
    <string name="error_invalid_email">Invalid email</string>
    <string name="error_incorrect_password">Incorrect password</string>
    <string name="error_updating_round">Error updating round</string>
    <string name="error_adding_round">Error adding round</string>

    <string name="insert_email">Insert Email of the player</string>
    <string name="error_adding_yourself">You can´t invite yourself</string>
    <string name="error_user_not_found">User Not Found</string>
</resources>
