<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/general_settings">
        <EditTextPreference
                android:capitalize="words"
                android:defaultValue="@string/pref_default_display_name"
                android:inputType="textCapWords"
                android:key="board_player_name"
                android:maxLines="1"
                android:selectAllOnFocus="true"
                android:singleLine="true"
                android:title="@string/player_name"/>
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/game_settings">
        <SwitchPreference
                android:defaultValue="true"
                android:key="music_switch"
                android:summary="@string/sound_summary"
                android:title="@string/sound" />
        <ListPreference
                android:defaultValue="4"
                android:entries="@array/pref_game_rc_list_titles"
                android:entryValues="@array/pref_game_rc_list_values"
                android:key="board_rows_list"
                android:negativeButtonText="@null"
                android:positiveButtonText="@null"
                android:title="@string/n_rows" />
        <ListPreference
                android:defaultValue="4"
                android:entries="@array/pref_game_rc_list_titles"
                android:entryValues="@array/pref_game_rc_list_values"
                android:key="board_columns_list"
                android:negativeButtonText="@null"
                android:positiveButtonText="@null"
                android:title="@string/n_columns" />
    </PreferenceCategory>

</PreferenceScreen>
