<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.MainActivity">

    <TextView
            android:id="@+id/game_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:background="@color/black"
            android:textColor="@color/darkRed"
            android:padding="20sp"
            style="@style/TextGameTitle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_bias="0.088"/>

    <LinearLayout
            android:id="@+id/ll_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="@id/game_title"
            app:layout_constraintTop_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:padding="20sp">

        <Button
                android:id="@+id/btn_new_game_mainmenu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start"
                style="@style/BtnStartMenu"/>


        <Button
                android:id="@+id/btn_about_mainmenu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about"
                android:textAlignment="center"
                style="@style/BtnStartMenu"/>

    </LinearLayout>


</android.support.constraint.ConstraintLayout>